xss attack prevention completed

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -26,6 +26,10 @@ body {
 
 }
 
+textarea {
+  font-family: "Source Sans 3", sans-serif;
+}
+
 /* nav {
   font-family: "Bungee", sans-serif;
   font-size: 400px;
